--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strava Data Visualization</title>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-3.3.0.min.js"></script>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-3.3.0.min.js"></script>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-3.3.0.min.js"></script>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-api-3.3.0.min.js"></script>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-gl-3.3.0.min.js"></script>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-mathjax-3.3.0.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-image: radial-gradient(circle, #71c9ce, #6fa8dc, #8e7cc3);
-            background-attachment: fixed;
-            background-size: cover;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Strava Data Visualization</title>
+        <script src="https://cdn.bokeh.org/bokeh/release/bokeh-3.3.0.min.js"></script>
+        <script src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-3.3.0.min.js"></script>
+        <script src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-3.3.0.min.js"></script>
+        <script src="https://cdn.bokeh.org/bokeh/release/bokeh-api-3.3.0.min.js"></script>
+        <script src="https://cdn.bokeh.org/bokeh/release/bokeh-gl-3.3.0.min.js"></script>
+        <script src="https://cdn.bokeh.org/bokeh/release/bokeh-mathjax-3.3.0.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+        
+        <style>
+body {
+    font-family: 'Roboto', sans-serif;
+}
 
-        .top-bar {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #edf2f7;
-            padding: 1rem;
-            text-align: center;
-            font-size: 1.8rem;
-            border-bottom: 5px solid #edf2f7;
-        }
+.top-bar {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #edf2f7;
+    padding: 1rem;
+    text-align: center;
+    font-size: 1.8rem;
+    border-bottom: 5px solid #edf2f7;
+}
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px; /* Adjust gap as needed */
-            margin: 20px auto;
-            max-width: 1200px; /* Adjust max width as needed */
-        }
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px; /* Adjust gap as needed */
+    margin: 20px auto;
+    max-width: 1200px; /* Adjust max width as needed */
+}
 
-        .plot-container {
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 2rem;
-            border-radius: 2rem;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-        }
+.plot-container {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 2rem;
+    border-radius: 2rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
 
-        .bottom-bar {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #edf2f7;
-            padding: 1rem;
-            text-align: center;
-            font-size: 1.5rem;
-            border-top: 5px solid #edf2f7;
-        }
-    </style>
-</head>
+.bottom-bar {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #edf2f7;
+    padding: 1rem;
+    text-align: center;
+    font-size: 1.5rem;
+    border-top: 5px solid #edf2f7;
+}
+        </style>
+    </head>
 
-<body>
-    <div class="top-bar">
-        Strava Data Visualization
-    </div>
-
-    <div class="grid-container">
-        <div class="plot-container">
-            {% for script, div, title in components %}
-            <h2>{{ title }}</h2>
-            {{ script | safe }}
-            {{ div | safe }}
-            {% endfor %}
+    <body>
+       <div class="top-bar">
+            Strava Data Visualization
         </div>
-    </div>
 
-
-    <div class="bottom-bar">
-        Built with ❤️ by Adrian
-    </div>
-</body>
-
+        <div class="grid-container">
+            <div class="plot-container">
+                {% for script, div in components %}
+                {{ script | safe }}
+                {{ div | safe }}
+                {% endfor %}
+            </div>
+        </div>
 </html>
 
